# trading-strategies

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_strategy.py
trading-strategies/: main.py
