[tool.poetry]
name = "trading-strategies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trading_strategies"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pandas-ta = "^0.3.14b0"
plotly = "^5.13.0"
backtesting = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
